<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/tipPercent_category"
        android:key="pref_rounding_category"
        >
    <CheckBoxPreference
        android:key="pref_remember_percent"
        android:title="@string/remember_percent_title"
        android:summary="@string/remember_percent_summary"
        android:defaultValue="false" />

        <ListPreference
            android:key="pref_defaultTip"
            android:title="Default Tip Percent"
            android:summary="Select the default tip percentage"
            android:dependency="pref_remember_percent"
            android:dialogTitle="Default Tip Percentage"
            android:entries="@array/defaultTip_keys"
            android:entryValues="@array/defaultTip_values"
            android:defaultValue="@string/tip_default"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/rounding_category"
        android:key="pref_tipPercent_category"
        >

    <ListPreference
        android:key="pref_rounding"
        android:title="@string/rounding_title"
        android:summary="@string/rounding_summary"
        android:dialogTitle="@string/rounding_title"
        android:entries="@array/rounding_keys"
        android:entryValues="@array/rounding_values"
        android:defaultValue="@string/rounding_default" />

    </PreferenceCategory>

</PreferenceScreen>